tests/paczka1/small_fuzzy/37862184.err
Error in line 2: TxzISQV2Y A416 33,4
Error in line 1: XVxVSnlR S771 8,6
Error in line 5: XVxVSnlR A926 141,03
Error in line 6: UjiK S771 80,0
Error in line 9: M1StjqrmlZ0 A328 32,5
Error in line 13: 9I98 S771 97,40
Error in line 12: 9I98 S771 80,8
